--- a/backstage/google-calendar-api-api-sandbox-backstage.yml
+++ b/backstage/google-calendar-api-api-sandbox-backstage.yml
@@ -35,6 +35,8 @@ spec:
     servers:
       - url: https://www.googleapis.com/calendar/v3
         description: Google Calendar API Server
+      - url: http://localhost:8080/rest/google-calendar-api/1.0.0
+        description: Sandbox
     tags:
       - name: Calendars
         description: Operations related to Calendars
