--- a/backstage/google-drive-activity-api-api-sandbox-backstage.yml
+++ b/backstage/google-drive-activity-api-api-sandbox-backstage.yml
@@ -28,6 +28,8 @@ spec:
     servers:
       - url: https://driveactivity.googleapis.com
         description: Google Drive Activity API Server
+      - url: http://localhost:8080/rest/google-drive-activity-api/v2
+        description: Sandbox
     tags:
       - name: Activity
         description: Operations related to Activity
