--- a/backstage/google-drive-labels-api-api-sandbox-backstage.yml
+++ b/backstage/google-drive-labels-api-api-sandbox-backstage.yml
@@ -31,6 +31,8 @@ spec:
     servers:
       - url: https://drivelabels.googleapis.com
         description: Google Drive Labels API Server
+      - url: http://localhost:8080/rest/google-drive-labels-api/v2
+        description: Sandbox
     tags:
       - name: Labels
         description: Operations related to Labels
