--- a/backstage/google-gmail-api-api-sandbox-backstage.yml
+++ b/backstage/google-gmail-api-api-sandbox-backstage.yml
@@ -67,6 +67,8 @@ spec:
     servers:
       - url: https://gmail.googleapis.com
         description: Google Gmail API Server
+      - url: http://localhost:8080/rest/google-gmail-api/1.0.0
+        description: Sandbox
     security:
       - oauth2Auth: []
     tags:
