--- a/backstage/google-sheets-api-api-sandbox-backstage.yml
+++ b/backstage/google-sheets-api-api-sandbox-backstage.yml
@@ -37,6 +37,8 @@ spec:
     servers:
       - url: https://sheets.googleapis.com
         description: Google Sheets API Server
+      - url: http://localhost:8080/rest/google-sheets-api/1.0.0
+        description: Sandbox
     security:
       - oauth2Auth: []
     tags:
